fix skeleton loading not showing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -560,12 +560,16 @@ body > main > section.hero-element > div > div > div > button {
 /* The moving element */
 .lazyload::after,.lazyloading::after {
     display: block;
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     transform: translateX(-100%);
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
-    animation: loading 1s infinite;
+    background: linear-gradient(90deg, transparent,
+            rgba(255, 255, 255, 0.2), transparent);
+
+    /* Adding animation */
+    animation: loading 0.8s infinite;
 }
 
 /* Loading Animation */
